--- a/hs_model_program/templates/pages/create-hydro-program.html
+++ b/hs_model_program/templates/pages/create-hydro-program.html
@@ -270,13 +270,13 @@
     </div>
   </div>
 
-     <!--release notes-->
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Release Notes</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="release_notes" name='release_notes' placeholder="">
-    </div>
-  </div>
+{#     <!--release notes-->#}
+{#  <div class="form-group">#}
+{#    <label for="" class="col-sm-2 control-label">Release Notes</label>#}
+{#    <div class="col-sm-10">#}
+{#      <input type="text" class="form-control" id="release_notes" name='release_notes' placeholder="">#}
+{#    </div>#}
+{#  </div>#}
 
     <!--program website-->
   <div class="form-group">
