follow up fix to add projection info to resource landing page and also fixed issue [#64] which is just one line fixer

--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -60,7 +60,7 @@
 </div>
 
 <div class="col-md-5 text-justify">
-<h2>About {{ u.first_name }}</h2>{{ profile.details|richtext_filters|safe }}</div>
+<h2>About {{ u.first_name }}</h2>{{ profile.details }}</div>
 
 <div class="col-md-4">
 <h2>Resources</h2>
