--- a/hs_core/templates/pages/resource-selection.html
+++ b/hs_core/templates/pages/resource-selection.html
@@ -19,7 +19,7 @@
     <li>Files are private, until you choose to share them</li>
     </ul>
 
-<form class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" action="/hsapi/_internal/describe-resource/">
+<form class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" action="/hsapi/_internal/create-resource/">
     {% csrf_token %}
     <div class="form-group">
         <label for="" class="col-sm-2 control-label">Select a resource Type:</label>
@@ -50,7 +50,7 @@
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Describe Resource</button>
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Create Resource</button>
         </div>
     </div>
 </form>
