issues [#66] and [#39] fixed

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -419,16 +419,10 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="submit-for-publication-title">Submit resource for publication</h4>
+            <h4 class="modal-title" id="delete-resource-title">Delete Resource</h4>
           </div>
           <div class="modal-body">
-
-                <strong>THIS IS A PERMANENT ACTION.</strong> This will delete the resource entirely. A copy of your 
-                resource data will not be retained by Hydroshare.  We recommend highly that you download the latest copy
-                of your resource before confirming this action.
-              <hr/>
-                <a class="btn btn-primary btn-block" href="{{ bag.bag.url }}">Download resource package</a>
-
+                <strong>THIS IS A PERMANENT ACTION </strong> that will delete the resource entirely. Keep a copy if you still need this information.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
