Sign in and sign out semantics

--- a/ga_resources/templates/includes/ga_editable_toolbar.html
+++ b/ga_resources/templates/includes/ga_editable_toolbar.html
@@ -5,7 +5,7 @@
     {% csrf_token %}
 
     <a id="editable-toolbar-toggle" href="#">&gt;&gt;</a>
-    <a id="editable-toolbar-logout" href="#">{% trans "Log out" %}</a>
+    <a id="editable-toolbar-logout" href="#">{% trans "Sign out" %}</a>
 </form>
 
 <img id="editable-loading" src="{% static "mezzanine/img/loadingAnimation.gif" %}"/>
