--- a/theme/templates/accounts/account_login.html
+++ b/theme/templates/accounts/account_login.html
@@ -4,7 +4,7 @@
 {% block main %}
 
 {% if request.user.is_authenticated %}
-    <p>{% trans "You're already logged in. If you'd like to log in as a different user, you'll need to log out first." %}</p>
+    <p>{% trans "You're already signed in. If you'd like to sign in as a different user, you'll need to sign out first." %}</p>
 {% else %}
     {{ block.super }}
 
@@ -38,7 +38,7 @@
         </fieldset>
     </form>
 
-    <p>{% blocktrans with request.GET.next as next %}If you don't have an account you can <a href="/?next={{ next }}">sign up</a> for one now.{% endblocktrans %}</p>
+    <p>{% blocktrans with request.GET.next as next %}If you don't have an account you can <a href="/?next={{ next }}">join HydroShare</a> now.{% endblocktrans %}</p>
     {% url "mezzanine_password_reset" as password_reset_url %}
     {% url "profile_update" as profile_update_url %}
     {% blocktrans %}<p>You can also <a href="{{ password_reset_url }}?next={{ profile_update_url }}">reset your password</a> if you've forgotten it.</p>{% endblocktrans %}</p>
