--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -131,7 +131,7 @@
 
                                 <div id="recaptcha-div" style="margin-bottom: 0.5em; background: white; border-radius: 4px; border: 1px solid"></div>
 
-                                <input class="hl-btn hl-btn-green btn-block" type="button" id="signup" value="Sign up & start collaborating.">
+                                <input class="hl-btn hl-btn-green btn-block" type="button" id="signup" value="Join HydroShare & start collaborating.">
                             </div>
                           </form>
                         </div>
