--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -153,8 +153,10 @@
                               </ul>
                             </div>
                         </td>
-                        {% if page.perms.change and resource_type != "Geographic Raster Resource" %}
-                        <td><button class="btn btn-success btn-block"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>
+                        {% if page.perms.change %}
+                            {% if resource_type != "Geographic Raster Resource" or not cm.files.all %}
+                                <td><button class="btn btn-success btn-block"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>
+                            {% endif %}
                         {% endif %}
                     </tr>
                 </tfoot>
