--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -11,11 +11,14 @@
     <h2>Resource Details</h2>
 
 <div class="btn-toolbar" style="padding-bottom: 0.5em;">
-    {% if page.perms.change %}
+{#    {% if page.perms.change %}#}
+
+    {% if can_edit %}
     <a class="btn btn-primary" id="share" href="#sharing">Share</a>
     {% endif %}
 
-    {% if page.perms.delete %}
+{#    {% if page.perms.delete %}#}
+    {% if can_edit %}
     <button class="btn btn-danger" id="delete"  data-toggle="modal" data-target="#delete-resource-dialog">Delete</button>
     {% endif %}
 </div>
@@ -59,8 +62,10 @@
                 <p><strong>No citations listed</strong></p>
             {% endfor %}
             </ul>
-            {% if page.perms.change %}
-                <button class="btn btn-primary" id="add-reference" data-toggle="modal" data-target="#add-reference-dialog">Add reference</button>
+{#            {% if page.perms.change %}#}
+            {%  if can_edit %}
+                {# Pabitra: This needs to be enabled once this functionality is mapped to the new metadata element #}
+                <button class="btn btn-primary" id="add-reference" data-toggle="modal" data-target="#add-reference-dialog" disabled>Add reference</button>
             {% endif %}
 
 
@@ -119,7 +124,8 @@
                     <td>{{ f.resource_file.name|slice:"33:" }}</td>
                     <td>{% if preview %}<a class="btn btn-info btn-block" href="{{ preview }}">Preview</a>{% endif %}</td>
                     <td><a class="btn btn-primary btn-block" href="{{ f.resource_file.url }}">Download ({{ f.resource_file.size|filesizeformat }})</a></td>
-                    {% if page.perms.change %}
+{#                    {% if page.perms.change %}#}
+                      {% if can_edit %}
                         <div class="modal fade" id="delete-resource-file" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                           <div class="modal-dialog">
                             <div class="modal-content">
@@ -160,10 +166,9 @@
                               </ul>
                             </div>
                         </td>
-                        {% if page.perms.change %}
-                            {% if resource_type != "Geographic Raster Resource" or not cm.files.all %}
-                                <td><button class="btn btn-success btn-block"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>
-                            {% endif %}
+{#                        {% if page.perms.change and resource_type != "Geographic Raster Resource" %}#}
+                        {% if can_edit and resource_type != "Geographic Raster Resource" %}
+                        <td><button class="btn btn-success btn-block"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>
                         {% endif %}
                     </tr>
                 </tfoot>
