--- a/hs_core/templates/pages/resource-selection.html
+++ b/hs_core/templates/pages/resource-selection.html
@@ -26,8 +26,8 @@
         <div class="col-sm-10">
             <select class="form-control" name="resource-type" id="resource-type">
                 <option value="GenericResource">Generic Resource</option>
-                <option value="RasterResource">Geographic Raster Resource</option>
-                <option value="InstResource">RHESSys Instance Resource</option>
+{#                <option value="RasterResource">Geographic Raster Resource</option>#}
+{#                <option value="InstResource">RHESSys Instance Resource</option>#}
             </select>
         </div>
     </div>
