netCDF app working under #62 branch code"

--- a/hs_core/templates/pages/resource-selection.html
+++ b/hs_core/templates/pages/resource-selection.html
@@ -28,6 +28,7 @@
                 <option value="GenericResource">Generic Resource</option>
                 <option value="RasterResource">Geographic Raster Resource</option>
                 <option value="InstResource">RHESSys Instance Resource</option>
+                <option value="NetcdfResource">NetcdfResource</option>
             </select>
         </div>
     </div>
