paring down code to accomodate metadata scheme

--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -74,6 +74,7 @@
       </div>
   </div>
 
+{#<input type="hidden" class="form-control" name="start_date" id="'start_date">#}
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
