--- a/ref_ts/templates/pages/reftimeseries.html
+++ b/ref_ts/templates/pages/reftimeseries.html
@@ -5,6 +5,19 @@
 {#                    <select name="designees" id="view_groups-select" multiple class="form-control" size="20">#}
 {#                        {% for u in groups %}#}
 {% load pages_tags mezzanine_tags comment_tags keyword_tags hydroshare_tags crispy_forms_tags staticfiles %}
+
+
+{% with page.get_content_model as cm %}
+
+{% block extra_content %}
+    <p> THis is my site NaME: {{ testsite.name }}</p>
+    <p> THIS is my Site LOngGI: {{ testsite.longitude }}</p>
+    <p> THis is my site Lat: {{ testsite.latitude }}</p>
+    <p> THIS is my Site code: {{ testsite.code }}</p>
+    <img id="vis" src={{visfile.resource_file.url}}>
+{% endblock %}
+
+{% endwith %}
 {##}
 {#{% block main %}#}
 {##}
