paring down code to accomodate metadata scheme

--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -75,43 +75,7 @@
       </div>
   </div>
 
- <h3>Add your metadata here:</h3>
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Title*</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="title" id="" placeholder="Title">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Creators*</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="creators" id="" placeholder="Creators" value="{{ user|best_name }}">
-    </div>
-  </div>
-
-   <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Contributors*</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="contributors" id="" placeholder="Contributors" value="{{ user|best_name }}">
-    </div>
-   </div>
-
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Abstract</label>
-    <div class="col-sm-10">
-        <textarea class="form-control" name="abstract" id="" cols="30" rows="10" placeholder="Abstract"></textarea>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Subject Keywords</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="" name='keywords' placeholder="Keywords">
-    </div>
-  </div>
-
-<input type="hidden" class="form-control" name="start_date" id="start_date">
+{#<input type="hidden" class="form-control" name="start_date" id="'start_date">#}
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
