--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -1,93 +1,58 @@
 {% extends "pages/page.html" %}
 
-{% load geoanalytics_tags mezzanine_tags pages_tags hydroshare_tags %}
+{% load mezzanine_tags pages_tags hydroshare_tags %}
 
 {% block title %}
 
-    Create Resource
+    Select resource
 
 {% endblock %}
 
 {% block main %}
 
-<h2>Describe your resource with metadata:</h2>
-<p>Use this form to create metadata for your Resource. Be as descriptive as you can since all of this information
-        will show up when your Resource is displayed. You can edit this information later.
-</p>
+    <h2>Select a resource type and upload files as needed to create a new resource</h2>
+
+    <ul>
+    <li>All of the files you upload here will be grouped together into a "Resource"</li>
+    <li>File size is limited to 10 GB per file</li>
+    <li>Once you've added all of your files, you can describe your Resource on the next page</li>
+    <li>Files are private, until you choose to share them</li>
+    </ul>
+
 <form class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" action="/hsapi/_internal/create-resource/">
     {% csrf_token %}
-  <h3>Add your metadata here:</h3>
-  <input type="hidden" name="resource-type" id="resource-type" value="{{ resource_type }}">
-  <input type="hidden" name="title" id="" value="{{ res_title }}">
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Creators</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="creators" id="" placeholder="Creators" value="{{ user|best_name }}">
-    </div>
-  </div>
-
-   <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Contributors</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="contributors" id="" placeholder="Contributors" value="{{ user|best_name }}">
-    </div>
-   </div>
-
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Abstract</label>
-    <div class="col-sm-10">
-        <textarea class="form-control" name="abstract" id="" cols="30" rows="10" placeholder="Abstract" {% if res_abstract %} value="{{ res_abstract }}" {%  endif %}></textarea>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Subject Keywords</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="" name='keywords' placeholder="Keywords" {% if res_keywords %} value="{{ res_keywords }}" {%  endif %}>
-    </div>
-  </div>
-
-  {% block extra_content %}
-  {% endblock %}
-
-  {% if res_sci_metadata %}
-    {% for attr, val_dict in res_sci_metadata.items %}
-        <h5>{{ attr }}</h5>
-        <div class ="border-form">
-            {% for subattr, subval in val_dict.items %}
-                <div class="form-group">
-                <label for="" class="col-sm-2 control-label">{{ subattr }}</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="" name='{{ subattr }}' value="{{ subval }}">
-                </div>
-                </div>
-            {% endfor %}
+    <div class="form-group">
+        <label for="" class="col-sm-2 control-label">Select a resource Type:</label>
+        <div class="col-sm-10">
+            <select class="form-control" name="resource-type" id="resource-type">
+                <option value="GenericResource">Generic Resource</option>
+{#                <option value="RasterResource">Geographic Raster Resource</option>#}
+{#                <option value="InstResource">RHESSys Instance Resource</option>#}
+            </select>
         </div>
-    {% endfor %}
-  {% endif %}
-
-  {% if res_add_metadata %}
-    <h4>Extended metadata terms</h4>
-    {% for attr, val_dict in res_add_metadata.items %}
-        <h5>{{ attr }}</h5>
-        <div class ="border-form">
-            {% for subattr, subval in val_dict.items %}
-            <div class="form-group">
-            <label for="" class="col-sm-2 control-label">{{ subattr }}</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="" name='{{ subattr }}' value="{{ subval }}">
-            </div>
-            </div>
-            {% endfor %}
-        </div>
-    {% endfor %}
-  {% endif %}
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary btn-lg btn-block" style="margin-top: 4px">Create Resource</button>
     </div>
-  </div>
+    <div class="form-group">
+        <label for="" class="col-sm-2 control-label">Title</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name="title" id="title" value="Untitled resource">
+        </div>
+    </div>
+    <h3>Add your files here:</h3>
+    <table class="table" id="file-list">
+    <tbody id="files">
+        <tr>
+            <td><input type="file" name="files" id="" multiple/></td>
+        </tr>
+    </tbody>
+    </table>
+
+    <h2 style="color:red">{{ file_size_error }}</h2>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Create Resource</button>
+        </div>
+    </div>
 </form>
 
 {% endblock %}
