--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -74,7 +74,8 @@
         </div>
         <div class="col-lg-10" id="items">
             <div style="padding-bottom: 0.5em">
-            <a class="btn btn-success" href="/resource-selection/"><i class="fa fa-plus"></i> Create new</a>
+{#            <a class="btn btn-success" href="/resource-selection/"><i class="fa fa-plus"></i> Create new</a>#}
+            <a class="btn btn-success" href="/hsapi/_internal/create-resource/select-resource-type"><i class="fa fa-plus"></i> Create new</a>
             </div>
             <table class="table table-striped table-hover" id="item-selectors">
                 <tr>
@@ -87,13 +88,13 @@
 
                 {# ################### #}
                 {% for res in resources %}
-                <tr>
-                    <td><a href="{{ res.get_absolute_url }}">{{ res.title }}</a></td>
-                    {# <th><i class="text-warning fa {% if starred %}fa-star{% else %}fa-star-o{% endif %}"></i></th>  #}
-                    <td>{{ res|resource_type }}</td>
-                    <td>{{ res.user|contact|safe }}</td>
-                    <td>{{ res.updated|date }}, {{ res.updated|time }}</td>
-                </tr>
+                    <tr>
+                        <td><a href="{{ res.get_absolute_url }}">{{ res.title }}</a></td>
+                        {# <th><i class="text-warning fa {% if starred %}fa-star{% else %}fa-star-o{% endif %}"></i></th>  #}
+                        <td>{{ res|resource_type }}</td>
+                        <td>{{ res.user|contact|safe }}</td>
+                        <td>{{ res.updated|date }}, {{ res.updated|time }}</td>
+                    </tr>
                 {% endfor %}
 
             </table>
