--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -12,13 +12,10 @@
 
 <div class="btn-toolbar" style="padding-bottom: 0.5em;">
     {% if page.perms.change %}
-
-{#    {% if can_edit %}#}
     <a class="btn btn-primary" id="share" href="#sharing">Share</a>
     {% endif %}
 
     {% if page.perms.delete %}
-{#    {% if can_edit %}#}
     <button class="btn btn-danger" id="delete"  data-toggle="modal" data-target="#delete-resource-dialog">Delete</button>
     {% endif %}
 </div>
@@ -58,52 +55,15 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2>Resource Description</h2>
-
-{#            {% if cm.content %}#}
-{#                <h4>Abstract</h4>#}
-{#                {% inplace_edit "cm.content|linebreaksbr|safe"%}#}
-{#            {% endif %}#}
-
-            <h4>References</h4>
-            <ul class="list-unstyled">
-            {% for citation in citations %}
-                <li>{{ citation }}</li>
-            {% empty %}
-                <p><strong>No citations listed</strong></p>
-            {% endfor %}
-            </ul>
-            {% if page.perms.change %}
-{#            {%  if can_edit %}#}
-                {# Pabitra: This needs to be enabled once this functionality is mapped to the new metadata element #}
-                <button class="btn btn-primary" id="add-reference" data-toggle="modal" data-target="#add-reference-dialog" disabled>Add reference</button>
-            {% endif %}
-
-
-{#            <h4>Other Metadata</h4>#}
+            <h2>Science Metadata</h2>
 
             <div class="form-group">
-                <label for="" class="col-sm-2 control-label" style="margin-left: -15px"><h4>Science Metadata</h4></label>
-                <div class="col-sm-10">
+{#                <label for="" class="col-sm-2 control-label" style="margin-left: -15px"><h4>Science Metadata</h4></label>#}
+{#                <div class="col-sm-12">#}
                     {% crispy metadata_form %}
-                </div>
+{#                </div>#}
             </div>
-
-{#            <table class="table table-condensed">#}
-{#            {% for term in dublin_core %}#}
-{#                {% ifnotequal term|dcterm 'Title' %}#}
-{#                    <tr>#}
-{#                        {% if term|dcterm == 'Date' or term|dcterm == 'Date Created' or term|dcterm == 'Date Modified' or term|dcterm == 'Date Submitted'%}#}
-{#                            <th>{{ term|dcterm }}</th>#}
-{#                            <td>{{ term.content|slice:":10" }}</td>#}
-{#                        {%  else %}#}
-{#                            <th>{{ term|dcterm }}</th>#}
-{#                            <td>{{ term.content }}</td>#}
-{#                        {% endif %}#}
-{#                    </tr>#}
-{#                {% endifnotequal %}#}
-{#            {% endfor %}#}
-{#            </table>#}
+            {# TODO: Pabitra to check if this for loop code is relevant #}
             {% for attr, val_dict in core_metadata.items %}
                 <h5>{{ attr }}</h5>
                 <table class="table table-condensed">
@@ -115,11 +75,6 @@
                     {% endfor %}
                 </table>
             {% endfor %}
-
-{#            {% if page.perms.change %}#}
-{#                <button class="btn btn-primary" id="add-dcterm" data-toggle="modal" data-target="#add-dcterm-dialog">Add metadata term</button>#}
-{#            {% endif %}#}
-
 
         </div>
     </div>
@@ -137,7 +92,6 @@
                     <td>{% if preview %}<a class="btn btn-info btn-block" href="{{ preview }}">Preview</a>{% endif %}</td>
                     <td><a class="btn btn-primary btn-block" href="{{ f.resource_file.url }}">Download ({{ f.resource_file.size|filesizeformat }})</a></td>
                     {% if page.perms.change %}
-{#                      {% if can_edit %}#}
                         <div class="modal fade" id="delete-resource-file" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                           <div class="modal-dialog">
                             <div class="modal-content">
@@ -179,7 +133,6 @@
                             </div>
                         </td>
                         {% if page.perms.change and resource_type != "Geographic Raster Resource" %}
-{#                        {% if can_edit and resource_type != "Geographic Raster Resource" %}#}
                         <td><button class="btn btn-success btn-block"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>
                         {% endif %}
                     </tr>
