title from front page, bracklocs,

--- a/hs_core/templates/pages/resource-selection.html
+++ b/hs_core/templates/pages/resource-selection.html
@@ -28,7 +28,7 @@
                 <option value="GenericResource">Generic Resource</option>
                 <option value="RasterResource">Geographic Raster Resource</option>
                 <option value="InstResource">RHESSys Instance Resource</option>
-                <option value="RefTimeSeries">refts</option>
+                <option value="RefTimeSeries">CUAHSI HIS Referenced Time Series</option>
             </select>
         </div>
     </div>
