--- a/ref_ts/templates/pages/reftimeseries.html
+++ b/ref_ts/templates/pages/reftimeseries.html
@@ -3,13 +3,9 @@
 {#{% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}#}
 
 {% block extra_content %}
-    <p> THis is my site NaME: {{ testsite.name }}</p>
-    <p> THIS is my Site LOngGI: {{ testsite.longitude }}</p>
-    <p> THis is my site Lat: {{ testsite.latitude }}</p>
-    <p> THIS is my Site code: {{ testsite.code }}</p>
     <img id="vis" src={{visfile.resource_file.url}}>
 {% endblock %}
-{% endwith %}
+
 {##}
 {#{% block main %}#}
 {##}
@@ -569,7 +565,7 @@
 {#    </div>#}
 {#    </div>#}
 
-    {% comments_for cm %}
+{#    {% comments_for cm %}#}
 
     {#                #}
     {# dialogs follow #}
